--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "firebase": "^8.3.3",
     "jquery": "^3.6.0",
     "mdbreact": "^5.0.1",
     "popper.js": "^1.16.1",
