--- a/package.json
+++ b/package.json
@@ -7,18 +7,22 @@
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
-    "bootstrap": "^4.6.0",
-    "firebase": "^8.3.3",
+    "bootstrap": "^4.6.1",
+    "emailjs-com": "^3.2.0",
+    "firebase": "^9.6.9",
     "jquery": "^3.6.0",
     "mdbreact": "^5.0.1",
     "popper.js": "^1.16.1",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.2.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
+    "react-redux": "^7.2.6",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "reactstrap": "^8.9.0",
+    "redux": "^4.1.2",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
@@ -44,5 +48,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "type": "module"
 }
