--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^4.6.1",
     "emailjs-com": "^3.2.0",
     "firebase": "^9.6.10",
+    "google-map-react": "^2.1.10",
     "jquery": "^3.6.0",
     "mdbreact": "^5.2.0",
     "popper.js": "^1.16.1",
